--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "@thiagoelg/node-printer",
+  "name": "@guilherme_souza/node-printer-updated-fork",
   "description": "Node.js printer bindings",
-  "version": "0.6.2",
+  "version": "0.6.3",
   "homepage": "https://github.com/thiagoelg/node-printer",
-  "author": {
-    "name": "Ion Lupascu",
-    "url": "http://program-support.co.uk/",
-    "email": "ionlupascu@gmail.com"
-  },
+  "author": "Ion Lupascu <ionlupascu@gmail.com> (http://program-support.co.uk/)",
   "contributors": [
     "Thiago Lugli <thiagoelg@gmail.com>",
     "Eko Eryanto <ekoeryanto@gmail.com>"
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/thiagoelg/node-printer.git"
+    "url": "git://github.com/Guilhermesou/node-printer-fork-updated-libs.git"
   },
   "devDependencies": {
     "node-abi": "^3.62.0",
@@ -37,7 +33,7 @@
   "binary": {
     "module_name": "node_printer",
     "module_path": "./lib/",
-    "host": "https://github.com/thiagoelg/node-printer/releases/download/",
+    "host": "https://github.com/Guilhermesou/node-printer-fork-updated-libs/releases/download/",
     "remote_path": "v{version}"
   },
   "licenses": [
@@ -50,5 +46,14 @@
     "nan": "^2.19.0",
     "prebuild-install": "^7.1.2"
   },
-  "types": "types/index.d.ts"
+  "types": "types/index.d.ts",
+  "bugs": {
+    "url": "https://github.com/thiagoelg/node-printer/issues"
+  },
+  "directories": {
+    "example": "examples",
+    "lib": "lib",
+    "test": "test"
+  },
+  "license": "ISC"
 }
